[package]
name = "vscl"
description = """
vscl is a simple tool to execute VS Code launch configurations directly from the terminal,
without needing to open the VS Code editor. It supports listing and running configurations
defined in launch.json, and can handle environment variables and .env files for your projects.
"""
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ctrlc = "3.4"
clap = { version = "4.5.40", features = ["derive"] }
tabled = "0.20.0"
